@@ -6,6 +6,8 @@ pts-core: Workaround/fix PHP 5.4 usage with RHEL7-based distributions
 pts-core: Convert compiler / multicore / single-threaded test suites into virtual test suites since their properties can be auto-determined based on OB metadata to avoid manually maintaining them
 pts-core: Add virtual test suites for "riscv" and "aarch64" to make it easy to show test profiles that can run successfully on RISC-V and 64-bit Arm hardware
 phodevi: Add Arm Cortex-X1C detection
+phodevi: CPU temperature reporting for additional SoCs
+phoromatic: Additional input sanitization
 
 Phoronix Test Suite 10.8.1
 23 January 2022
